--- a/JokeAppV2/app/build.gradle
+++ b/JokeAppV2/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
+    implementation "androidx.navigation:navigation-compose:2.5.2"
+
 
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
