--- a/JokeAppV2/app/src/main/AndroidManifest.xml
+++ b/JokeAppV2/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.JokeAppV2"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.jokeappv2.display.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JokeAppV2">
